--- a/ImageModificationTest/Resource1.resx
+++ b/ImageModificationTest/Resource1.resx
@@ -124,6 +124,12 @@
   <data name="filterTest" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\filterTest.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="InTheArmyOriginal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\InTheArmyOriginal.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="InTheArmySobel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\InTheArmySobel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="testBeforeFilter" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\testBeforeFilter.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
