--- a/ImageModificationTest/Properties/Resources.resx
+++ b/ImageModificationTest/Properties/Resources.resx
@@ -119,12 +119,6 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="InTheArmyKirsch" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\InTheArmyKirsch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="InTheArmyOriginal" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\InTheArmyOriginal.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="testBeforeFilter" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\testBeforeFilter.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\InTheArmyKirsch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
